--- a/views/template/head.pug
+++ b/views/template/head.pug
@@ -6,7 +6,7 @@ html
 		link(rel='stylesheet', href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap")
 		link(rel='stylesheet', href='/init.css')
 		link(rel='icon', href='/favicon.svg', type='image/svg+xml')
-		script(src='/init.js', async)
+		// script(src='/init.js', async)
 
 	body
 		.background
