--- a/src/css/superleague.styl
+++ b/src/css/superleague.styl
@@ -76,9 +76,6 @@
 				justify-content center
 				flex 0 0 100px
 
-
-
-
 		&.entry
 			// &[data-position='5']
 			// 	border-bottom 2px dashed #2acb4f
@@ -160,6 +157,32 @@
 					font-size .9rem
 					font-weight 600
 
+				&.form
+					a
+						text-decoration none
+						display block
+						width 4px
+						height .8rem
+						margin-right 3px
+						border-radius 2px
+
+						&.w
+							background #2acb4f
+							box-shadow 0 0 10px rgba(#2acb4f, .75)
+							position relative
+							top -.25rem
+						&.t
+							background #e7f612
+							box-shadow 0 0 10px rgba(#e7f612, .75)
+						&.l
+							background #ec041f
+							box-shadow 0 0 10px rgba(#ec041f, .75)
+							position relative
+							top  .25rem
+
+						&:hover
+							background #538cff
+							box-shadow 0 0 10px #538cff
 
 				&.points
 					color white
