--- a/views/superleague-stats.pug
+++ b/views/superleague-stats.pug
@@ -3,32 +3,49 @@ include template/superleague-nav.pug
 
 .contain
 	.wrap
-		// .nav-bar-tertiary
-		// 	a(href="/superleague/stats" class=(nav.tertiary === 'summary' ? 'active' : '')) Totals
-		// 	a(href="/superleague/stats/averages" class=(nav.tertiary === 'averages' ? 'active' : '')) Average
+		.nav-bar-tertiary
+			a(href="#" class=(nav.tertiary === 'summary' ? 'active' : '')) Summary
+			a(href="#" class=(nav.tertiary === 'averages' ? 'active' : '')) ??
+			a(href="#" class=(nav.tertiary === 'averages' ? 'active' : '')) ??
+			a(href="#" class=(nav.tertiary === 'averages' ? 'active' : '')) ??
 
 
-		.stats
+		.player-stats
 
 			.row.head
 				each n, key in stats
 					each v, k in n
-						.item= k
+						if(k === 'color')
+							- continue
+
+						else if(k === 'player')
+							.item.player
+
+						else if(k === 'acronym')
+							.item.acronym
+
+						else
+							.item= k
 					- break
 
 			each n, key in stats
-				.row(class=(key === 0 ? 'top' : ''))
-					.item.rank= n.rank
-					.item.team(
-						data-position= i
-						style="--teamcolor: " + n.color + "; --teamglow: " + n.color + "80"
-					)= n.acronym
-					.item.player
-						// href= '/player/' + n.player
-						a(
-							href='#'
-						)= n.player
-					.item.value= n.value
+				.row.entry
+					each v, k in n
+						if(k === 'color')
+							- continue
 
+						else if(k === 'player')
+							.item.player
+								a(
+									href='#'
+								)= n.player
+
+						else if(k === 'acronym')
+							.item.acronym(
+								style="--teamcolor: " + n.color + "; --teamglow: " + n.color + "80"
+							)= n.acronym
+
+						else
+							.item= v
 
 include template/foot.pug
