--- a/views/superleague-stats.pug
+++ b/views/superleague-stats.pug
@@ -3,12 +3,11 @@ include template/superleague-nav.pug
 
 .contain
 	.wrap
-		.nav-bar-tertiary
-			a(href="#" class=(nav.tertiary === 'summary' ? 'active' : '')) Summary
-			a(href="#" class=(nav.tertiary === 'averages' ? 'active' : '')) ??
-			a(href="#" class=(nav.tertiary === 'averages' ? 'active' : '')) ??
-			a(href="#" class=(nav.tertiary === 'averages' ? 'active' : '')) ??
-
+		// .nav-bar-tertiary
+		// 	a(href="#" class=(nav.tertiary === 'summary' ? 'active' : '')) Summary
+		// 	a(href="#" class=(nav.tertiary === 'averages' ? 'active' : '')) ??
+		// 	a(href="#" class=(nav.tertiary === 'averages' ? 'active' : '')) ??
+		// 	a(href="#" class=(nav.tertiary === 'averages' ? 'active' : '')) ??
 
 		.player-stats
 
