--- a/src/css/superleague.styl
+++ b/src/css/superleague.styl
@@ -361,6 +361,18 @@
 					color #b9b9b9
 					font-size .8rem
 
+				&.versus
+					justify-content right
+					font-size .7rem
+					flex 0 0 40px
+					padding-right .5rem
+
+					font-weight 600
+					text-transform uppercase
+					text-shadow 0 0 10px var(--teamglow)
+					color var(--teamcolor)
+					opacity .65
+
 				&.value
 					justify-content right
 					flex 0 0 75px
