--- a/views/superleague-leaders.pug
+++ b/views/superleague-leaders.pug
@@ -5,10 +5,11 @@ include template/superleague-nav.pug
 	.wrap
 
 		.nav-bar-tertiary
-			a(href="/superleague/leaders" class=(nav.tertiary === 'totals' ? 'active' : '')) Total
-			a(href="/superleague/leaders/averages" class=(nav.tertiary === 'averages' ? 'active' : '')) Average
-			a(href="/superleague/leaders/top" class=(nav.tertiary === 'top' ? 'active' : '')) Top
+			a(href="/superleague/leaders" class=(nav.tertiary === 'totals' ? 'active' : '')) Totals
+			a(href="/superleague/leaders/averages" class=(nav.tertiary === 'averages' ? 'active' : '')) Averages
 			a(href="/superleague/leaders/teampercent" class=(nav.tertiary === 'teampercent' ? 'active' : '')) Team %
+			a(href="/superleague/leaders/top" class=(nav.tertiary === 'top' ? 'active' : '')) Game Tops
+			a(href="/superleague/leaders/versus" class=(nav.tertiary === 'versus' ? 'active' : '')) Versus
 
 		.stats.leaders
 
@@ -29,6 +30,12 @@ include template/superleague-nav.pug
 									a(
 										href='#'
 									)= n.player
+
 								.item.value= n.value
+
+								if n.versus
+									.item.versus(
+										style="--teamcolor: " + n.versuscolor + "; --teamglow: " + n.versuscolor + "80"
+									)= n.versus
 
 include template/foot.pug
