--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -20,15 +20,17 @@ body
 
 .background
 	background black url('https://i.imgur.com/ycymETc.png')
-	// background black url('https://i.imgur.com/WE1LAXo.png')
-	background-position center center
+	background-position center -920px
+	// background black url('https://i.imgur.com/trirbHV.png')
+	// background-position center -900px
 	background-size auto 100%
+	background-repeat no-repeat
 	width 100%
 	height 1200px
 	display block
 	position absolute
 	z-index 0
-	filter grayscale(42%)
+	filter grayscale(40%)
 
 .hide
 	display none !important
@@ -162,6 +164,7 @@ body
 				margin-right .5rem
 				border-radius .2rem .2rem 0 0
 				background rgba(black, .2)
+				backdrop-filter blur(2px)
 
 				&.active
 				&:hover
@@ -169,6 +172,7 @@ body
 					z-index 999
 					color white
 					background linear-gradient(to top right,var(--color),#002787)
+
 
 .nav-bar-tertiary
 	border-bottom 1px solid #ffffff0a
