--- a/views/superleague-stats.pug
+++ b/views/superleague-stats.pug
@@ -3,11 +3,15 @@ include template/superleague-nav.pug
 
 .contain
 	.wrap
-		// .nav-bar-tertiary
-		// 	a(href="#" class=(nav.tertiary === 'summary' ? 'active' : '')) Summary
-		// 	a(href="#" class=(nav.tertiary === 'averages' ? 'active' : '')) ??
-		// 	a(href="#" class=(nav.tertiary === 'averages' ? 'active' : '')) ??
-		// 	a(href="#" class=(nav.tertiary === 'averages' ? 'active' : '')) ??
+		.nav-bar-tertiary
+			a(href="/superleague/stats" class=(nav.tertiary === 'totals' ? 'active' : '')) Totals
+			- i = 0
+			each n, key in rounds
+				- i++
+				a(
+					href="/superleague/stats/" + i
+					class= (nav.tertiary == i ? 'active' : '')
+				) Round #{i}
 
 		.player-stats
 
