--- a/views/superleague-table.pug
+++ b/views/superleague-table.pug
@@ -4,8 +4,8 @@ include template/superleague-nav.pug
 .contain
 	.wrap
 		.nav-bar-tertiary
-			a(href="/table" class=(nav.tertiary === 'totals' ? 'active' : '')) League
-			a(href="/playoffs" class=(nav.tertiary === 'playoffs' ? 'active' : '')) Playoffs
+			a(href="/superleague/standings" class=(nav.tertiary === 'league' ? 'active' : '')) League
+			a(href="/superleague/standings/playoffs" class=(nav.tertiary === 'playoffs' ? 'active' : '')) Playoffs
 
 		.table
 			.row.head
