--- a/views/template/superleague-nav.pug
+++ b/views/template/superleague-nav.pug
@@ -12,7 +12,7 @@
 		.nav-bar
 			a(href="/superleague" class=(nav.secondary === 'schedule' ? 'active' : '')) Schedule
 			a(href="/superleague/teams" class=(nav.secondary === 'teams' ? 'active' : '')) Teams
-			a(href="/superleague/table" class=(nav.secondary === 'table' ? 'active' : '')) Table
+			a(href="/superleague/standings" class=(nav.secondary === 'standings' ? 'active' : '')) Standings
 			a(href="/superleague/leaders" class=(nav.secondary === 'leaders' ? 'active' : '')) Leaders
 			a(href="/superleague/records" class=(nav.secondary === 'records' ? 'active' : '')) Records
 			a(href="/superleague/stats" class=(nav.secondary === 'stats' ? 'active' : '')) Stats
