--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -20,9 +20,9 @@ body
 
 .background
 	background black url('https://i.imgur.com/ycymETc.png')
-	background-position center -867px
+	// background-position center -867px
 	// background black url('https://i.imgur.com/trirbHV.png')
-	// background-position center -900px
+	background-position center -922px
 	background-size auto 100%
 	background-repeat no-repeat
 	width 100%
@@ -43,7 +43,7 @@ body
 	width 100%
 	display flex
 	flex-flow nowrap
-	// display none
+	display none
 
 	a
 		color #4a6ba3
