--- a/views/superleague-playoffs.pug
+++ b/views/superleague-playoffs.pug
@@ -12,7 +12,7 @@ include template/superleague-nav.pug
 				.round
 					.match
 						.team(
-							style="--teamcolor: #f586ff; --teamglow: #f586ff80"
+							style="--teamcolor: #f586ff; --teamglow: #f586ff80; opacity: .4"
 						)
 							.name CBH
 							.wins 0
@@ -20,7 +20,7 @@ include template/superleague-nav.pug
 							style="--teamcolor: #b2b2b2; --teamglow: #b2b2b280"
 						)
 							.name CHE
-							.wins 0
+							.wins 2
 				.round
 					.links-single-long-bottom
 					.links-single-long-bottom-2
@@ -33,21 +33,21 @@ include template/superleague-nav.pug
 							style="--teamcolor: #ff635e; --teamglow: #ff635e80"
 						)
 							.name WIZ
-							.wins 0
+							.wins 2
 						.team(
-							style="--teamcolor: #5563ff; --teamglow: #5563ff80"
+							style="--teamcolor: #5563ff; --teamglow: #5563ff80; opacity: .4"
 						)
 							.name THE
-							.wins 0
+							.wins 1
 
 					.match
 						.team(
 							style="--teamcolor: #ffc800; --teamglow: #ffc80080"
 						)
 							.name TAG
-							.wins 0
+							.wins 2
 						.team(
-							style="--teamcolor: #54da41; --teamglow: #54da4180"
+							style="--teamcolor: #54da41; --teamglow: #54da4180; opacity: .4"
 						)
 							.name COO
 							.wins 0
@@ -59,12 +59,16 @@ include template/superleague-nav.pug
 
 				.round
 					.match
-						.team
-							.name ???
-							.wins 0
-						.team
-							.name ???
-							.wins 0
+						.team(
+							style="--teamcolor: #ff635e; --teamglow: #ff635e80"
+						)
+							.name WIZ
+							.wins 1
+						.team(
+							style="--teamcolor: #ffc800; --teamglow: #ffc80080; opacity: .4"
+						)
+							.name TAG
+							.wins 1
 
 
 				.round
@@ -72,24 +76,31 @@ include template/superleague-nav.pug
 
 				.round
 					.match
-						.team
-							.name ???
-							.wins 0
-						.team
-							.name ???
+						.team(
+							style="--teamcolor: #f586ff; --teamglow: #f586ff80"
+						)
+							.name CBH
+							.wins 1
+						.team(
+							style="--teamcolor: #ff635e; --teamglow: #ff635e80; opacity: .4"
+						)
+							.name WIZ
 							.wins 0
 
 				.round
 					.links-single
 
-
 				.round
 					.match
-						.team
-							.name ???
+						.team(
+							style="--teamcolor: #b2b2b2; --teamglow: #b2b2b280"
+						)
+							.name CHE
 							.wins 0
-						.team
-							.name ???
+						.team(
+							style="--teamcolor: #f586ff; --teamglow: #f586ff80"
+						)
+							.name CBH
 							.wins 0
 
 
